front/stylesheets/style.css
:root {
  --bs-body-bg: #f4f4f4;
  --bs-body-color: #333;
  --bs-primary: #2a9d8f;
  --bs-secondary: #264653;
  --bs-danger: #e76f51;
  --bs-warning: #f6c453;
  --bs-warning-hover: #e0ac3f;
  --header-bg-color: #2f3e46;
  --sidebar-bg: #264653;
  --sidebar-text: #eeeeee;
  --sidebar-text-active: #fff;
  --bs-btn-disabled-bg: #469c92;
  --bs-btn-disabled-border-color: #469c92;
  --bs-link-color: #008c8c;
  --bs-link-color-rgb: var(--bs-link-color);
  --bs-link-hover-color: #c4ebe5;
  --bs-card-bg: #ffffff;
  --bs-card-border-color: #c0eeee;
  --bs-body-bg-rgb: var(--bs-body-bg) ;
}

.form-control {
  background-color: #fff;
  border-radius: 0.3rem;
}
.form-control:focus {
  background-color: #fff;
}

.table {
  background-color: #fff;
  border-radius: 0.3rem;
}
.table > :not(caption) > * > * {
  background-color: #fff;
}
.table th {
  background-color: #264653;
  color: #fff;
}
.table tr.table-primary td {
  background-color: #cfe2ff !important;
  color: var(--bs-table-color) !important;
}

.card {
  background-color: #fff;
  border-radius: 0.3rem;
  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
}

.nav-pills .nav-link.active {
  color: var(--sidebar-text-active);
  font-weight: bold;
  background-color: var(--bs-primary);
  border-radius: 0;
}

.nav-link {
  color: var(--sidebar-text);
}

html {
  height: 100%;
}

body {
  height: 100%;
  margin: 0;
}

.full-height-1 {
  height: calc(100vh - 220px);
  overflow-y: auto;
}

.full-height-2 {
  height: calc(100vh - 270px);
  overflow-y: auto;
}

.full-height-3 {
  height: calc(100vh - 320px);
  overflow-y: auto;
}

.full-height-4 {
  height: calc(100vh - 380px);
  overflow-y: auto;
}

.change-list {
  height: calc(100vh - 960px);
  overflow-y: auto;
}

.btn-link {
  text-align: left;
  padding: 0;
  color: var(--bs-body-color);
}

.container,
.content-wrapper {
  height: 100%;
  font-size: 12pt;
  width: 1200px;
}

.content {
  min-width: 1170px;
}

.content {
  min-width: 1170px;
}

tbody {
  font-size: 12pt;
}

.content-wrapper,
.main-footer,
.main-header {
  margin-left: 250px;
}

.main-header {
  background-color: var(--header-bg-color);
  color: white;
}

.main-sidebar {
  bottom: 0;
  float: none;
  left: 0;
  position: fixed;
  top: 0;
  width: 250px;
  z-index: 1038;
}

.main-footer {
  background-color: var(--bs-body-bg);
  border-top: 1px solid #dee2e6;
  color: #777c81;
  padding: 1rem;
  width: inherit;
}

.main-sidebar .sidebar {
  height: calc(100vh - (3.5rem + 0px));
}

.sidebar {
  overflow-x: hidden;
  overflow-y: auto;
  padding-bottom: 0.5rem;
  padding-left: 0rem;
  padding-right: 0rem;
  padding-top: 0.5rem;
  background-color: var(--sidebar-bg);
  color: white;
}
.sidebar ul li {
  list-style: none;
}
.sidebar a:hover {
  text-decoration: none;
}

ul.nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  padding-left: 0;
  list-style: none;
}

.page-title {
  height: 50px;
}
.page-title h1 {
  font-size: 1.75rem;
  margin: 6px;
}
.page-title input[type=text] {
  font-size: 1.75rem;
  font-weight: 500;
}
.page-title a.btn,
.page-title button[type=button] {
  margin: 5px;
}

.page-subtitle {
  margin-bottom: 5px;
}
.page-subtitle h2 {
  font-size: 1.5rem;
  font-weight: 500;
  margin: 5px 10px;
}
.page-subtitle a.btn,
.page-subtitle button[type=button] {
  margin: 5px;
}
.page-subtitle a.nav-link {
  color: var(--bs-body-color);
}

.card-frame,
.button-frame {
  padding: 10px;
}

.button-frame {
  border: 1px solid var(--bs-card-border-color);
  border-radius: 4px;
}

.number {
  text-align: right;
}

.text {
  text-align: left;
}

.fontsize-12pt {
  font-size: 12pt;
}

th {
  text-align: center !important;
}

.over,
tr.over,
tr.over td {
  background-color: #4cd964;
}

.form-control,
.form-select {
  background-color: white;
}

.brand-container {
  display: grid;
  grid-template-areas: "brand-link pushmenu";
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  font-size: 1.25rem;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  padding: 0.8125rem 0.5rem;
  white-space: nowrap;
  overflow: hidden;
  background-color: var(--header-bg-color);
  font-size: 1.25rem;
  padding: 0.8125rem 0.5rem;
  white-space: nowrap;
  overflow: hidden;
}
.brand-container .pushmenu {
  color: var(--body-color);
}
.brand-container .brand-link {
  color: #fff;
}
.brand-container .brand-link .brand-image {
  float: left;
  line-height: 0.8;
  margin-left: 0.8rem;
  margin-right: 0.5rem;
  margin-top: -3px;
  max-height: 33px;
  width: auto;
}

.fw-light {
  font-weight: 300 !important;
}

.bg-light {
  --bs-bg-opacity: 1;
  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
}

.layout-fixed:not(.sidebar-horizontal) .main-sidebar {
  bottom: 0;
  float: none;
  left: 0;
  position: fixed;
  top: auto;
}

.login-page,
.register-page,
.setup-page {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background-color: #e9ecef;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  height: 100vh;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.login-box,
.register-box {
  width: 360px;
}

.login-logo,
.register-logo {
  font-size: 2.1rem;
  font-weight: 300;
  margin-bottom: 0.9rem;
  text-align: center;
}

.login-box .card,
.register-box .card {
  margin-bottom: 0;
}

.login-logo img {
  width: 45px;
}

.entry,
.list {
  padding-top: 20px;
}
.entry .application,
.list .application {
  padding: 0;
  margin-top: 2px;
  height: 20px;
}

.entry-content {
  padding-top: 20px;
}

.entry .content .body {
  background-color: #fff;
  padding: 2em 1em;
  border-radius: 0.3rem;
}
/* ... */

